1.Fixed settings sidebar in main menu 2.Sidebars are hided on small screen

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ body{
 }
 
 .settings-btn{
+    display: none;
     position: absolute;
     right: 0;
     top: 0;
